--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS generator</title>
-    <link rel="stylesheet" href="css_generator.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -55,6 +55,6 @@
         <br>
         <button class="copy">Copy code</button>
     </div>
-    <script src="css_generator.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
